# AI-Mega-App

./: .cursorignore  .env.example  .gitignore  AGENTS.md  BUILD_GUIDE.md  CLAUDE.md  HANDOFF_OLLAMA_INTEGRATION.md  HANDOFF_next_session_model_tests.md  HANDOFF_phase0_benchmarks.md  HANDOFF_tool_calling_latency.md  PLAN.md  README.md  RESTART_PLAN.md  Start Prompter.bat  docker-compose.yml  litellm_config.yaml  opencode.json  prompter_x_complete_spec.md  pyproject.toml  repomix-output.xml  repomix.config.json  requirements.txt  settings.json
.cursor/: hooks.json
app/: __init__.py  chat_orchestrator.py  chat_service.py  clipboard_paste.py  config.py  config_validation.py  debug_trace.py  env_secrets.py  litellm_resolver.py  litellm_sync.py  lmstudio_client.py  lmstudio_server_config.py  logging_setup.py  main.py  message_parts.py  model_scheduler.py  paste_input.py  project_manager.py  protocols.py  rag.py  router.py  schemas.py  settings_store.py  terminal_input.py  turn_tracker.py  types.py  utils.py
docs/: BENCHMARK_PLAN.md  CURSOR_RULES.md  FEATURES.md  PHASE0.5_REWORK_PLAN.md  PHASE0.5_TEST_PLAN.md  PHASE0_FINDINGS_SUMMARY.md  PHASE_PROMPTS.md  classifier_prompt.md  classifier_prompt_handoff.md  deepseek-r1-chat-log-analysis.md  model_recommends.md  ollama-lan-backend-setup.md  parallel-agent-prompts.md  perplexity_needle_research_prompt.txt  phase0-measurements.md  phase1-classifier-model-override-handoff.md  phase1-local-tool-loop-fix.md  phase1-open-bugs.md  phase1-search-ddg-resilience.md  system-prompt.md
scripts/: _eval_gpu_run.py  auto_bench_watcher.sh  (+23 more)
(+135 files in other folders)
