[project]
name = "prompter"
version = "0.1.0"
description = "Local project assistant with LM Studio inference and RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "pypdf>=5.0.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "prompt-toolkit>=3.0.48",
    "pillow>=10.0.0",
    "pyperclip>=1.9.0",
    "litellm>=1.55.0",
    "qdrant-client>=1.12.0",
    "ddgs>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
windows = [
    "pywin32>=306",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
